samples/_failures_safe/1761404497_1ba261_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8381c13f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_8381c13f.c:158:13: error: expected expression at end of input
  158 |             if (!read_identifier(lexer))
      |             ^~
./samples/SAFE/__tmp_8381c13f.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8381c13f.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8381c13f.c:158:13: error: expected declaration or statement at end of input
